# purelibc

./: CMakeLists.txt  README  README.md  TODO  Uninstall.cmake  dir.c  exec.c  kernel_termios.ppc.h  purelibc.h  socketcalls.c  stdio.c  syscalls.c
